// Copyright (C) 2023 Felix Huettner
//
// This file is part of DTRD.
//
// DTRD is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// DTRD is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package dtn_bundle;

message SubmitBundleRequest {
  string destination = 1;
  bytes payload = 2;
  uint64 lifetime = 3;
  bool debug = 4;
}

message SubmitBundleRespone {
  bool success = 1;
  string message = 2;
}

message ListenBundleRequest { string endpoint = 1; }

message ListenBundleResponse {
  string source = 1;
  bytes payload = 2;
}

service BundleService {
  rpc SubmitBundle(SubmitBundleRequest) returns (SubmitBundleRespone);
  rpc ListenBundles(ListenBundleRequest) returns (stream ListenBundleResponse);
}
